# swisshikefinder

./: .env  .gitignore  Dockerfile  Makefile  README.md  build.env  docker-compose.yml  main.go
.github/: github-actions.yml
.github/workflows/: main.yml
data/: .python-version  README.md  pyproject.toml  scrape_hikes.py  transform.sql  transform_bckp.sql
data/db/: attractions.parquet  destinations.parquet  gold_tour_classification.parquet  gold_tour_images.parquet  gold_tour_itinerary.parquet  gold_tour_tourist_types.parquet  gold_tours.parquet  load.sql  schema.sql  tours.parquet
data/examples/: attraction.json  attractions.json  destination.json  destinations.json  tour.json  tour_geodata.json  tours.json
data/results/: attraction_ids.json  destination_ids.json  tour_ids.json
src/: go.mod  go.sum  handlers.go  helpers.go  index.html  main.go  middleware.go  routes.go
src/assets/: style.css
src/hikes/: hikes.go
src/internal/config/: app_env.go  go.mod  logger.go
src/internal/hikes/: go.mod
src/internal/logger/: go.mod  logger.go
src/internal/models/: go.mod  recommendations.go  tours.go
src/static/assets/: style.css
src/static/templates/: base.html  header.html  index.html  search.html
src/static/templates/pages/: home.html  not_found.html  recommend.html  search.html  server_error.html  tour.html
src/static/templates/partials/: header.html
src/templates/: index.html
